[package]
name = "pbft_impl_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.25.1"
hex = "0.3.0"
thiserror = "1.0"
p256 = "0.9.0"
rand_core="0.6.3"
ring = "0.16.20"
sha2 = "0.9.8"
digest = "0.9.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9.0"